<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mirea.chubuka_v_a.mirea_application.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mirea.chubuka_v_a.mirea_application.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mirea.chubuka_v_a.mirea_application.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_calculate"
        android:name="com.mirea.chubuka_v_a.mirea_application.Calculate"
        android:label="@string/menu_calculate"
        tools:layout="@layout/fragment_calculate" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mirea.chubuka_v_a.mirea_application.Settings"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="com.mirea.chubuka_v_a.mirea_application.Camera"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_music"
        android:name="com.mirea.chubuka_v_a.mirea_application.PlayMusic"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_play_music" />
</navigation>